CS: Make names match convention

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,9 +43,9 @@
     <color name="ReserveBackground">#6698c655</color>
     <color name="ReserveLine">#a4cb80</color>
     <color name="TimeBarTickColor">#3333</color>
-    <color name="buttonTextNormalColor">#333</color>
-    <color name="buttonTextActiveColor">#333</color>
-    <color name="buttonTextDisabledColor">#999</color>
+    <color name="ButtonTextNormal">#333</color>
+    <color name="ButtonTextActive">#333</color>
+    <color name="ButtonTextDisabled">#999</color>
     <color name="TextInfoColor">#666</color>
     <color name="CalendarWeekTextColor">#999</color>
     <color name="MenuButtonBackgroundColor">#005C99</color>
