--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,34 +1,34 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/relativeLayout1"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#fff"
-    android:padding="0dip" >
+    android:padding="0dip">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:paddingTop="20dp"
         android:paddingBottom="40dp"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp" >
+        android:paddingRight="20dp"
+        android:paddingTop="20dp">
 
         <TextView
             android:id="@+id/addressBookOptionLabel"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/addressBookOptionLabel"
-            style="@android:style/TextAppearance.Medium"
             android:textColor="#000" />
 
         <TextView
             android:id="@+id/addressBookHelpText"
+            style="@android:style/TextAppearance.Small"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/addressBookOptionLabel"
             android:text="@string/addressBookHelpText"
-            style="@android:style/TextAppearance.Small"
             android:textColor="#555" />
 
         <ToggleButton
@@ -38,16 +38,16 @@
             android:layout_alignLeft="@+id/addressBookOptionLabel"
             android:layout_alignRight="@+id/addressBookOptionLabel"
             android:layout_below="@+id/addressBookHelpText"
-            android:onClick="onToggleClicked"
-            android:layout_marginBottom="10dp" />
+            android:layout_marginBottom="10dp"
+            android:onClick="onToggleClicked" />
 
         <TextView
             android:id="@+id/defaultReservationAccountLabel"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/usedAddressBookOption"
             android:text="@string/settingsDefaultAccountForReservation"
-            style="@android:style/TextAppearance.Medium"
             android:textColor="#000" />
 
         <Spinner
@@ -55,26 +55,26 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/defaultReservationAccountLabel"
+            android:layout_marginBottom="10dp"
             android:inputType="text"
-            android:maxLines="1"
-            android:layout_marginBottom="10dp" />
+            android:maxLines="1" />
 
         <TextView
             android:id="@+id/usedAccountLabel"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/defaultReservationAccount"
             android:text="@string/used_google_account"
-            style="@android:style/TextAppearance.Medium"
             android:textColor="#000" />
 
         <TextView
             android:id="@+id/usedAccountHelp"
+            style="@android:style/TextAppearance.Small"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/usedAccountLabel"
             android:text="@string/googleAccountHelp"
-            style="@android:style/TextAppearance.Small"
             android:textColor="#555" />
 
         <Spinner
@@ -89,12 +89,12 @@
 
         <TextView
             android:id="@+id/roomNameLabel"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/usedAccountSpinner"
             android:layout_marginTop="10dp"
             android:text="@string/room_name"
-            style="@android:style/TextAppearance.Medium"
             android:textColor="#000" />
 
         <Spinner
@@ -112,25 +112,26 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/usedAccountSpinner"
             android:layout_below="@+id/roomNameSpinner"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:text="@string/removeUserData" />
+
         <TextView
             android:id="@+id/roomListLabel"
-            android:layout_below="@+id/removeUserDataButton"
-            android:layout_marginTop="10dp"
+            style="@android:style/TextAppearance.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/removeUserDataButton"
+            android:layout_marginTop="10dp"
             android:text="@string/shown_rooms"
-            style="@android:style/TextAppearance.Medium"
             android:textColor="#000" />
 
         <ListView
             android:id="@+id/roomListView"
-            android:layout_below="@+id/roomListLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/roomListLabel"
             android:cacheColorHint="@android:color/transparent" />
     </RelativeLayout>
 
-</RelativeLayout>
+</ScrollView>
