--- a/app/src/main/res/layout/day_column_header.xml
+++ b/app/src/main/res/layout/day_column_header.xml
@@ -1,5 +1,23 @@
+<LinearLayout
+    android:id="@+id/linearLayout1"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="200dp"
+    android:orientation="vertical"
+    android:layout_height="match_parent"
+    android:gravity="bottom">
 
-    <LinearLayout android:id="@+id/linearLayout1" xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="200dp" android:orientation="vertical" android:layout_height="match_parent" android:gravity="bottom">
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/weekLabel" android:textColor="@color/CalendarTextColor" android:paddingLeft="5sp"></TextView>
-        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/dayLabel" android:textColor="@color/CalendarTextColor" android:paddingLeft="5sp" android:paddingBottom="5sp"></TextView>
-    </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/weekLabel"
+        android:textColor="@color/CalendarTextColor"
+        android:paddingLeft="5sp"></TextView>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/dayLabel"
+        android:textColor="@color/CalendarTextColor"
+        android:paddingLeft="5sp"
+        android:paddingBottom="5sp"></TextView>
+</LinearLayout>
