--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -2,6 +2,7 @@
             android:id="@+id/relativeLayout1"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:fillViewport="true"
             android:background="#fff"
             android:padding="0dip">
 
