--- a/app/src/main/res/layout/quickbook_reservation.xml
+++ b/app/src/main/res/layout/quickbook_reservation.xml
@@ -2,4 +2,67 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/relativeLayout2">
+
+        <Button
+            android:layout_width="140dp"
+            android:layout_height="80dp"
+            android:text="15"
+            android:id="@+id/fifteenMinutes"
+            android:layout_alignParentTop="true" />
+
+        <Button
+            android:layout_width="140dp"
+            android:layout_height="80dp"
+            android:text="30"
+            android:id="@+id/thirtyMinutes"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/fifteenMinutes"
+            android:layout_toEndOf="@+id/fifteenMinutes" />
+
+        <Button
+            android:layout_width="140dp"
+            android:layout_height="80dp"
+            android:text="45"
+            android:id="@+id/fortyFiveMinutes"
+            android:layout_below="@+id/fifteenMinutes"
+            android:layout_toLeftOf="@+id/thirtyMinutes"
+            android:layout_toStartOf="@+id/thirtyMinutes" />
+
+        <Button
+            android:layout_width="140dp"
+            android:layout_height="80dp"
+            android:text="60"
+            android:id="@+id/sixtyMinutes"
+            android:layout_alignTop="@+id/fortyFiveMinutes"
+            android:layout_toRightOf="@+id/fortyFiveMinutes"
+            android:layout_toEndOf="@+id/fortyFiveMinutes" />
+
+    </RelativeLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Time: "
+        android:id="@+id/textView"
+        android:layout_above="@+id/relativeLayout2"
+        android:layout_alignLeft="@+id/relativeLayout2"
+        android:layout_alignStart="@+id/relativeLayout2"
+        android:layout_marginBottom="43dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Book Now"
+        android:id="@+id/button5"
+        android:layout_below="@+id/relativeLayout2"
+        android:layout_alignLeft="@+id/relativeLayout2"
+        android:layout_alignStart="@+id/relativeLayout2"
+        android:layout_marginTop="34dp" />
+
 </RelativeLayout>
