Added QuickBookReservation layout to RoomActivity and room_activity xml.

--- a/app/src/main/res/layout/room_activity.xml
+++ b/app/src/main/res/layout/room_activity.xml
@@ -55,4 +55,10 @@
         android:layout_height="fill_parent"
         android:layout_gravity="center"
         android:id="@+id/roomTrafficLights"/>
+
+    <com.futurice.android.reservator.view.QuickBookReservation
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center"
+        android:id="@+id/quickBookReservation"/>
 </FrameLayout>
