--- a/app/src/main/res/layout/room_activity.xml
+++ b/app/src/main/res/layout/room_activity.xml
@@ -60,5 +60,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_gravity="center"
-        android:id="@+id/quickBookReservation"/>
+        android:id="@+id/quickBookReservation"
+        android:visibility="invisible" />
 </FrameLayout>
+
