--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,10 +1,10 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/relativeLayout1"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:fillViewport="true"
-            android:background="#fff"
-            android:padding="0dip">
+    android:id="@+id/relativeLayout1"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
+    android:background="#fff"
+    android:padding="0dip">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -112,7 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/usedAccountSpinner"
-            android:layout_below="@+id/roomNameSpinner"
+            android:layout_below="@+id/languageSpinner"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:text="@string/removeUserData"/>
@@ -122,7 +122,7 @@
             style="@android:style/TextAppearance.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/removeUserDataButton"
+            android:layout_below="@+id/roomNameSpinner"
             android:layout_marginTop="10dp"
             android:text="@string/shown_rooms"
             android:textColor="#000"/>
@@ -133,6 +133,24 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/roomListLabel"
             android:cacheColorHint="@android:color/transparent"/>
+
+        <Spinner
+            android:id="@+id/languageSpinner"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/language"
+            android:layout_alignRight="@+id/language"
+            android:layout_below="@+id/language"
+            android:layout_marginBottom="10dp"/>
+
+        <TextView
+            android:id="@+id/language"
+            style="@android:style/TextAppearance.Medium"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/roomListView"
+            android:text="@string/language"
+            android:textColor="#000"/>
     </RelativeLayout>
 
 </ScrollView>
