--- a/app/src/main/res/layout/room_activity.xml
+++ b/app/src/main/res/layout/room_activity.xml
@@ -48,6 +48,16 @@
             android:background="@drawable/button_background"
             android:text="@string/seeAllRooms"
             android:textColor="#fff"/>
+
+        <Button
+            android:id="@+id/seeRoomTrafficLightsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_background"
+            android:text="@string/seeRoomTrafficLights"
+            android:textColor="#fff"
+            android:layout_alignBottom="@+id/seeAllRoomsButton"
+            android:layout_centerHorizontal="true" />
     </RelativeLayout>
 
     <com.futurice.android.reservator.view.RoomTrafficLights
