--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -21,7 +21,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/addressBookOptionLabel"
-            android:textColor="#000"/>
+            android:textColor="#000"
+            android:layout_below="@+id/titelSettings"/>
 
         <TextView
             android:id="@+id/addressBookHelpText"
@@ -48,7 +49,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/usedAddressBookOption"
-            android:text="@string/settingsDefaultAccountForReservation"
+            android:text="@string/settings_Default_Account_For_Reservation"
             android:textColor="#000"/>
 
         <Spinner
@@ -111,8 +112,7 @@
             android:id="@+id/removeUserDataButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/usedAccountSpinner"
-            android:layout_below="@+id/languageSpinner"
+            android:layout_below="@+id/saveSettings"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
             android:text="@string/removeUserData"/>
@@ -141,16 +141,52 @@
             android:layout_alignLeft="@+id/language"
             android:layout_alignRight="@+id/language"
             android:layout_below="@+id/language"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:spinnerMode="dropdown" />
 
         <TextView
             android:id="@+id/language"
             style="@android:style/TextAppearance.Medium"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/roomListView"
             android:text="@string/language"
-            android:textColor="#000"/>
+            android:textColor="#000"
+            android:layout_below="@+id/scrollView"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <TextView
+            style="@android:style/TextAppearance.Medium"
+            android:id="@+id/meetingDesignationLabel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/meetingTitleLabel"
+            android:textColor="#000"
+            android:layout_below="@+id/languageSpinner"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+
+        <Spinner
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/meetingDesignationSpinner"
+            android:layout_below="@+id/meetingDesignationLabel"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:spinnerMode="dropdown" />
+
+        <TextView
+            style="@android:style/TextAppearance.Large"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/setting"
+            android:id="@+id/titelSettings"
+            android:textIsSelectable="false"
+            android:textColor="@color/CalendarTextColor"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
 </ScrollView>
