--- a/app/src/main/res/layout/lobby_reservation_row.xml
+++ b/app/src/main/res/layout/lobby_reservation_row.xml
@@ -8,7 +8,7 @@
 
     <FrameLayout
         android:id="@+id/outerTitleLayout"
-        android:layout_width="170dp"
+        android:layout_width="133dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="120dp"
@@ -26,7 +26,6 @@
                 android:id="@+id/titleLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|left"
                 android:layout_marginLeft="10dp"
                 android:orientation="vertical">
 
@@ -157,6 +156,16 @@
                     android:focusable="true"
                     android:text="Reserve"
                     android:textColor="@color/button_color"></Button>
+
+                <ImageButton
+                    android:id="@+id/cancelButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="top"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/close_button_states"
+                    android:layout_alignParentEnd="true"></ImageButton>
             </RelativeLayout>
 
             <FrameLayout
@@ -164,14 +173,6 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"/>
 
-            <ImageButton
-                android:id="@+id/cancelButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/close_button_states"></ImageButton>
         </LinearLayout>
     </ViewSwitcher>
 </LinearLayout>
