--- a/app/src/main/res/layout/room_traffic_lights.xml
+++ b/app/src/main/res/layout/room_traffic_lights.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/roomTitle"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/TrafficLightText"
         android:gravity="left"
