rename string variable
rename string variable and change its value to what ist does. If you
click you return to weekview.

--- a/app/src/main/res/layout/room_traffic_lights.xml
+++ b/app/src/main/res/layout/room_traffic_lights.xml
@@ -116,7 +116,7 @@
         android:layout_alignParentBottom="true"
         android:textColor="@color/TrafficLightText"
         android:gravity="right"
-        android:text="@string/touchToReserve"
+        android:text="@string/touchToReturn"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textAllCaps="true"
