optimaze settings scrollview

--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -135,7 +135,8 @@
             android:layout_below="@+id/roomListLabel"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:nestedScrollingEnabled="true">
+            android:nestedScrollingEnabled="true"
+            android:fillViewport="true">
 
             <ListView
                 android:id="@+id/roomListView"
