--- a/app/src/main/res/layout/lobby_reservation_row.xml
+++ b/app/src/main/res/layout/lobby_reservation_row.xml
@@ -21,6 +21,13 @@
             android:layout_gravity="center_vertical"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/roomDefaultIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@android:drawable/ic_notification_overlay"
+                android:layout_marginRight="4dp"></ImageView>
+
 
             <LinearLayout
                 android:id="@+id/titleLayout"
