Enables walkthrough when user opens app for the first time. User can select account, whether he syncs non-resource calendars, visible rooms, default room.

--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -5,10 +5,9 @@
                 android:background="#fff"
                 android:gravity="center"
                 android:padding="0dip">
-
-    <TextView
-        android:id="@+id/textView1"
+    <ProgressBar
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/loadingText"/>
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
